# xarrams

./: .gitignore  LICENSE  MANIFEST.in  README.md  pixi.toml  pyproject.toml
tests/: test_core.py  test_import.py
xarrams/: __init__.py  build.py  calculations.py  constants.py  core.py  dask.py  execution.py  io.py  schedulers.py  soundings.py  utils.py
xarrams/data/: rams_pint_units.txt  rams_variables.csv
xarrams/templates/: cumulus_rams_slurm_submission_template.sh
